Implement StructurredConcurency for examples