@@ -46,18 +46,11 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.1.0</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M7</version> <!-- pick your own version -->
                 <configuration>
-                    <executable>${java.home}/bin/java</executable>
-                    <arguments>
-                        <argument>--add-modules=jdk.incubator.concurrent</argument>
-                        <argument>--enable-preview</argument>
-                        <argument>--class-path</argument>
-                        <classpath/>
-                        <argument>Main</argument>
-                    </arguments>
+                    <argLine>--add-modules=jdk.incubator.concurrent</argLine>
                 </configuration>
             </plugin>
         </plugins>
